<resources>
    <string name="app_name">My Movies</string>
    <string name="movies">Movies</string>
    <string name="top_5_movies">Top movies</string>
    <string name="see_all">See all</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="trending">Trending</string>
    <string name="connection_problem">Connection error!</string>
    <string name="top_movies">Top Movies</string>
    <string name="movie_title">Movie Title</string>
    <string name="description">Description</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>