<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AllMoviesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_32"
                    android:layout_height="@dimen/_32"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_8"
                    android:background="?selectableItemBackground"
                    android:contentDescription="@string/movies"
                    android:padding="@dimen/_4"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingHorizontal="@dimen/_16"
                    android:text="@string/movies"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movies_rec"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/movie_item" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/connection_problem"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_problem"/>
            <Button
                android:layout_marginTop="@dimen/_12"
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry" />
        </LinearLayout>
    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>