<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MovieDetailFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_256">


                <ImageView
                    android:id="@+id/image_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_256"
                    android:contentDescription="@string/movies"
                    android:scaleType="centerCrop" />

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/loadingBar"
                    android:layout_width="@dimen/_32"
                    android:layout_height="@dimen/_32"
                    android:layout_centerInParent="true"
                    android:indeterminate="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_12">

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/movie_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/movie_release_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_8"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rating_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="center_vertical"
                        android:textColor="@color/black" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_8" />
                </LinearLayout>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/black"
                    android:text="@string/description"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/movie_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/nunito_normal"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/back"
            android:layout_width="@dimen/_48"
            android:layout_height="@dimen/_48"
            android:layout_margin="@dimen/_12"

            app:cardBackgroundColor="#C6FFFFFF"
            app:cardCornerRadius="@dimen/_24">

            <ImageView
                android:layout_width="@dimen/_24"
                android:layout_height="@dimen/_24"
                android:layout_gravity="center"
                android:contentDescription="@string/movies"
                android:src="@drawable/back" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/progress_linear"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="#ffffff"
            android:orientation="vertical"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progress_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />
            <TextView
                android:visibility="gone"
                android:id="@+id/connection_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_problem"/>
            <Button
                android:visibility="gone"
                android:layout_marginTop="@dimen/_12"
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/retry" />
        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>